--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -140,42 +140,27 @@ Resources:
             Principal:
               AWS: !GetAtt SetupControlTowerCanaryRole.Arn
 
-#  SetupLandingZoneRule:
-#    Type: AWS::Events::Rule
-#    Properties:
-#      EventPattern:
-#        detail-type:
-#          - AWS Service Event via CloudTrail
-#        source:
-#          - aws.controltower
-#        detail:
-#          serviceEventDetails:
-#            setupLandingZoneStatus:
-#              state:
-#                - SUCCEEDED
-#          eventName:
-#            - SetupLandingZone
-#
-#      State: ENABLED
-#      Targets:
-#        - Arn: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:automation-definition/${FounopticumBootstrap}
-#          Id: SetupLandingZone
-#          RoleArn: !GetAtt SSMAutomationExecutionRoleforCWEvents.Arn
-#          InputTransformer:
-#            InputPathsMap:
-#              organizationalUnits: $.detail.serviceEventDetails.setupLandingZoneStatus.organizationalUnits
-#              accounts: $.detail.serviceEventDetails.setupLandingZoneStatus.accounts
-#            InputTemplate: |
-#              {
-#                "organizationalUnits": [<organizationalUnits>],
-#                "accounts": [<accounts>]
-#              }
-
   FounopticumBootstrapFunction:
     Type: AWS::Serverless::Function
     Properties:
       Events:
-        UpdateLandingZone:
+        SetupLandingZone: # setup entirely fresh account
+          Type: CloudWatchEvent
+          Properties:
+            InputPath: $.detail.serviceEventDetails.setupLandingZoneStatus
+            Pattern:
+              detail-type:
+                - AWS Service Event via CloudTrail
+              source:
+                - aws.controltower
+              detail:
+                serviceEventDetails:
+                  setupLandingZoneStatus:
+                    state:
+                      - SUCCEEDED
+                eventName:
+                  - SetupLandingZone
+        UpdateLandingZone: # re-setup after decommissioning
           Type: CloudWatchEvent
           Properties:
             InputPath: $.detail.serviceEventDetails.updateLandingZoneStatus
