dont fail on cfn stack deletion

--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -125,6 +125,7 @@ Resources:
 
   SetupControlTowerArtifactLocation:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
 
   SetupControlTowerArtifactLocationPolicy:
     Type: AWS::S3::BucketPolicy
