--- a/bootstrap/pipeline.yaml
+++ b/bootstrap/pipeline.yaml
@@ -238,3 +238,123 @@ Resources:
             End: true
       Policies:
         - CloudWatchPutMetricPolicy: {}
+          
+  DecommissionLandingZoneCanary:
+    Type: AWS::Synthetics::Canary
+    Properties:
+      Name: fnptcm-remove-ct
+      ArtifactS3Location: !Sub s3://${DecommissionLandingZoneArtifactLocation}
+      ExecutionRoleArn: !GetAtt DecommissionLandingZoneCanaryRole.Arn
+      RuntimeVersion: syn-1.0
+      StartCanaryAfterCreation: true
+      RunConfig:
+        TimeoutInSeconds: 600
+      Schedule:
+        DurationInSeconds: 3600
+        Expression: rate(0 minute)
+      Code:
+        Handler: pageLoadBlueprint.handler
+        Script: !Sub |
+          var synthetics = require('Synthetics');
+          const log = require('SyntheticsLogger');
+
+          const httpGet = url => {
+            const https = require('https');
+            return new Promise((resolve, reject) => {
+              https.get(url, res => {
+                res.setEncoding('utf8');
+                let body = '';
+                res.on('data', chunk => body += chunk);
+                res.on('end', () => resolve(body));
+              }).on('error', reject);
+            });
+          };
+
+          const flowBuilderBlueprint = async function () {
+            let page = await synthetics.getPage();
+
+            await synthetics.executeStep('consoleLogin', async function () {
+              const AWS = require("aws-sdk");
+
+              const federationEndpoint = 'https://signin.aws.amazon.com/federation';
+              const issuer = 'founopticum';
+              const destination = 'https://console.aws.amazon.com/';
+
+              let credentials = await AWS.config.credentialProvider.resolve((err, cred) => { return cred; }).resolvePromise()
+
+              const session = {
+                sessionId: credentials.accessKeyId,
+                sessionKey: credentials.secretAccessKey,
+                sessionToken: credentials.sessionToken
+              };
+
+              const encodedSession = encodeURIComponent(JSON.stringify(session));
+              const signinTokenUrl = `${!federationEndpoint}?Action=getSigninToken&SessionDuration=3600&Session=${!encodedSession}`;
+
+              const signinResponse = await httpGet(signinTokenUrl);
+
+              let consoleLoginUrl = `${!federationEndpoint}?Action=login&Issuer=${!issuer}&Destination=${!destination}&SigninToken=${!
+                JSON.parse(signinResponse).SigninToken
+              }`;
+
+              await page.goto(consoleLoginUrl, {waitUntil: ['load', 'networkidle0']});
+
+            });
+
+            await synthetics.executeStep('decommission', async function () {
+              await page.goto("https://eu-west-1.console.aws.amazon.com/controltower/home/settings", {waitUntil: ['load', 'networkidle0']});
+              await page.click("#decommission > div > div.ct-beta-features-content > div > div.awsui-util-mt-l > awsui-button > button");
+              await page.click("#awsui-checkbox-0");
+              await page.click("#awsui-checkbox-1");
+              await page.click("#awsui-checkbox-2");
+              await page.type("#awsui-input-0", "DECOMMISSION")
+              await page.click("#decommission > awsui-modal > div.awsui-modal-container > div > div > div.awsui-modal-footer.awsui-util-container-footer > span > span > awsui-button.ct-action-submit > button");
+              await page.waitFor(10000);
+            });
+          };
+
+          exports.handler = async () => {
+            return await flowBuilderBlueprint();
+          };
+
+  DecommissionLandingZoneArtifactLocation:
+    Type: AWS::S3::Bucket
+
+  DecommissionLandingZoneArtifactLocationPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref DecommissionLandingZoneArtifactLocation
+      PolicyDocument:
+        Statement:
+          - Effect: Allow
+            Action: '*'
+            Resource:
+              - !GetAtt DecommissionLandingZoneArtifactLocation.Arn
+              - !Sub ${DecommissionLandingZoneArtifactLocation.Arn}/*
+            Principal:
+              AWS: !GetAtt DecommissionLandingZoneCanaryRole.Arn
+
+  DecommissionLandingZoneCanaryRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/AdministratorAccess # fixme: least privilege
+      Policies:
+        - PolicyName: AllowS3List
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:ListAllMyBuckets
+                  - s3:GetBucketLocation
+                  - cloudwatch:PutMetricData
+                Resource: '*'
